--- a/Sources.html
+++ b/Sources.html
@@ -22,9 +22,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
     <div class="dropdown-content">
-      <a href="Step_1.html">Step 1: Writing code</a>
-      <a href="#">Step 2: Designing the Website using CSS</a>
-      <a href="#">Tips and tricks!</a>
+      <a href="Step_1.html">Basics of HTML</a>
     </div>
     </div>
     <button class="Light-mode" onclick="myFunction()">Toggle dark/light mode</button>
