--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
     <div class="dropdown-content">
-      <a href="Step_1.html">Step 1: Writing code</a>
-      <a href="#">Step 2: Designing the Website using CSS</a>
-      <a href="#">Tips and tricks!</a>
+      <a href="Step_1.html">Basics of HTML</a>
     </div>
     </div>
     <a href="Sources.html" target="_blank">Sources</a>
@@ -38,10 +36,10 @@
 
     <h1 style="margin-top: 5%;"> HTML Coding Crash Course </h1>
 
-    <h2> Hey there! Have you ever wanted to learn how to make websites using HTML and CSS code?
+    <h2> Hey there! Have you ever wanted to learn how to make websites using HTM?
      Well, you have come to the right place. This website would help you start programming
-     in HTML and CSS by giving you a step by step guide which is easy to understand and
-     follow! In order to start your website programming journey, click on one of the links below:
+     in HTML by giving you a step by step guide which is easy to understand and
+     follow! In order to start your website programming journey, click the link below:
     </h2>
     <div style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: -1;" >
       <video id="video" style="width:100%; height:100%" playsinline autoplay loop muted>
@@ -50,7 +48,7 @@
     </div>
 
     <div>
-      <a href="Step_1.html" class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Writing the Code for your Website </a>
+      <a href="Step_1.html" class="homepage_buttons" style="padding: 5%;"> Step 1: Writing the Code for your Website </a>
     </div>
 
     <script type="text/javascript">    
