--- a/Step_1.html
+++ b/Step_1.html
@@ -829,7 +829,10 @@
           </div>
         </a>
         <p>
-          <strong>Hey! This is the last section in my website and basically the last </strong>
+          <strong>Hey! This is the last section in my website and basically the last part of the basics of HTML programming.</strong>
+          Ordered and unordered lists can be useful when you want to mention a range of options/things, such as a list of features of a new product or a step by step guide. 
+          An ordered list goes down by numbers, such as 1. 2. 3. An unordered list just goes down by dots. In order to learn how to use this, lets use an unordered list in the Pros 
+          and Cons of the iPad.
         </p>
     <script type="text/javascript">    
         var percent = document.getElementById("progressbar");
