--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="google-site-verification" content="Ub6LLDfczY9apdDwMDdYBFD55voDA9LRDCfXZU0y0vE" />
 <meta name="HandheldFriendly" content="true">
-    <title> HTML Crash Course </title>
+    <div class="TITLE"><title> HTML Crash Course </title></div>
     <link rel="shortcut icon" href="Images/Website_icon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
     <a class="homepage_shortcut" href="index.html">
@@ -48,7 +48,7 @@
     </div>
 
     <div>
-      <a href="Step_1.html" class="homepage_buttons" style="padding: 5%;"> Step 1: Writing the Code for your Website </a>
+      <a href="Step_1.html" class="homepage_buttons" style="padding: 15%;"> Writing the Code for your Website in <HTML></HTML></a>
     </div>
 
     <script type="text/javascript">    
