--- a/Step_1.html
+++ b/Step_1.html
@@ -48,7 +48,7 @@
             <a href="#images">Images</a>
             <a href="#buttons_info">Buttons</a>
             <a href="#anchor">The anchor element</a>
-            <a href="#text-deco">Text formatting</a>
+            <a href="#text_deco">Text formatting</a>
             <a href="#videos">Videos</a>
             <a href="#lists">Ordered and Unordered lists</a>
           </div>
@@ -832,7 +832,8 @@
           <strong>Hey! This is the last section in my website and basically the last part of the basics of HTML programming.</strong>
           Ordered and unordered lists can be useful when you want to mention a range of options/things, such as a list of features of a new product or a step by step guide. 
           An ordered list goes down by numbers, such as 1. 2. 3. An unordered list just goes down by dots. In order to learn how to use this, lets use an unordered list in the Pros 
-          and Cons of the iPad.
+          and Cons of the iPad. First off all, lets try to add a bold title for the pros section of the list. Embed <code>Pros</code> in the strong element under the Pros. You should be able to do 
+          this by now, but if you are stuck, type in 
         </p>
     <script type="text/javascript">    
         var percent = document.getElementById("progressbar");
