--- a/Step_1.html
+++ b/Step_1.html
@@ -832,8 +832,22 @@
           <strong>Hey! This is the last section in my website and basically the last part of the basics of HTML programming.</strong>
           Ordered and unordered lists can be useful when you want to mention a range of options/things, such as a list of features of a new product or a step by step guide. 
           An ordered list goes down by numbers, such as 1. 2. 3. An unordered list just goes down by dots. In order to learn how to use this, lets use an unordered list in the Pros 
-          and Cons of the iPad. First off all, lets try to add a bold title for the pros section of the list. Embed <code>Pros</code> in the strong element under the Pros. You should be able to do 
-          this by now, but if you are stuck, type in 
+          and Cons of the iPad. First off all, lets try to add a bold title for the pros section of the list. Embed <code>Pros</code> in the strong element under the <mark>Pros and Cons Heading</mark>. You should be able to do 
+          this by now, but if you are stuck, type in <code>&lt;strong&gt;Pros&lt;/strong&gt;</code>. 
+          <br><br>
+          Next, you should add 2 line breaks and embed Cons in the strong element. You can either type the whole line of command out or you could just copy the command you have just written and replace the word <code>Pros</code> with <code>Cons</code>, 
+          which would save time.
+          <br><br>
+          First off all you have to specify which type of list you are going to use. For unordered lists you have to use <code>&lt;ul&gt;&lt;/ul&gt;</code> as the element and for ordered lists you have to use <code>&lt;ol&gt;&lt;/ol&gt;</code>.
+          <br> <br>
+          In order to add list iteam, you would have to use <code>&lt;li&gt;&lt;/li&gt;</code> for each item. You include this element in between the opening and closing tag of your unordered/ordered list and you include text inbetween the <code>li</code> element.
+          <br><br>
+          Let's include an unordered list the <mark>Pros</mark> list. First of all, include an unordered list closing an opening tag under the Pros headline. We are going to use <a href="Pros list.html" target="_blank">this</a> list. There are only 4 items in this list, so we would need 
+          <code>li elements</code> in between the <code>ul</code> elements. Type this out and include the 4 elements one by one in the <code>li elements</code>.
+          <br><br>
+          Your code should look like this:
+          <br><br>
+          
         </p>
     <script type="text/javascript">    
         var percent = document.getElementById("progressbar");
