--- a/Step_1.html
+++ b/Step_1.html
@@ -847,7 +847,11 @@
           <br><br>
           Your code should look like this:
           <br><br>
-          
+          <img src="Images/Pros code example.png" width="100%" height="auto">
+          <br><br>
+          Your website should look like this:
+          <br><br>
+          <img src="Images/Pros website list.png" width="100%" height="auto">
         </p>
     <script type="text/javascript">    
         var percent = document.getElementById("progressbar");
