--- a/Website Completed example.html
+++ b/Website Completed example.html
@@ -20,5 +20,12 @@ such as a camera, a photo app, a video library, and an app for playing music.</p
 <h2>When was it created?</h2>
 <h2>Was it successful?</h2>
 <h2>Pros and Cons</h2>
+<strong>Pros</strong>
+<ul>
+  <li>Easy to use</li>
+  <li>Touchscreen</li>
+  <li>Powerful</li>
+  <li>Ability to wirelessly access the Internet</li>
+</ul>
 </body>
 </html>
