--- a/Step_1.html
+++ b/Step_1.html
@@ -855,9 +855,18 @@
           <br><br>
           Next we will learn how to use an ordered list in order to list some cons of the iPad. Using and ordered list is basically the same as using an unordered list, but you just have to replace <code>ul</code> with <code>ol</code>.
           Let's try this by making one by ourselves. Under the Cons heading, open a <code>ol</code> element and include a closing one as well. In between those two, use <a href="Cons list.html" target="_blank">this</a> list and make sure to use three <code>li elements</code>.
-          Type them out one by one and make sure that everything is correct. Your webiste should now look like this:
-          
-
+          Type them out one by one and make sure that everything is correct.
+          <br><br>
+          Your code should look like this:
+          <br><br>
+          <img src="Images/Cons List code.png" width="100%" height="auto">
+          <br><br>
+          Your website should look like this:
+          <br><br>
+          <img src="Images/Cons List website.png" width="100%" height="auto">
+          <br><br>
+          <strong style="font-size: 18px;">Well done! You have learned all of the basics of HTML coding and you are free to modify the tutorial website. The other two empty heading can be used by you for practise. In order to move on, you would have to learn the advanced features and 
+          CSS coding for webiste styling. Thank you and See you Later!</strong>
         </p>
     <script type="text/javascript">    
         var percent = document.getElementById("progressbar");
