--- a/Website Completed example.html
+++ b/Website Completed example.html
@@ -27,5 +27,11 @@ such as a camera, a photo app, a video library, and an app for playing music.</p
   <li>Powerful</li>
   <li>Ability to wirelessly access the Internet</li>
 </ul>
+<strong>Cons</strong>
+<ol>
+  <li>Expensive</li>
+  <li>Needs a Wi-Fi Router</li>
+  <li>Isn’t as powerful as PCs</li>
+</ol>
 </body>
 </html>
