--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div>
-      <a href="Step_1.html" class="homepage_buttons" style="padding: 10%; text-align: center; width: 80%;"> Writing the Code for your Website in HTML</a>
+      <a href="Step_1.html" class="homepage_buttons"> Writing the Code for your Website in HTML</a>
     </div>
 
     <script type="text/javascript">    
