--- a/Step_1.html
+++ b/Step_1.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
     <title> HTML Crash Course: HTML Basics </title>
-    <link rel="shortcut icon" href="Images/Website_icon.ico" />
+    <link rel="shortcut icon" href="Images/Web logo.png" />
     <link rel="stylesheet" href="stylesheet.css">
     <a class="homepage_shortcut" href="index.html">
       <img src="Images/Web logo.png" width="10%" height="auto">
