made some final changes

--- a/Step_1.html
+++ b/Step_1.html
@@ -857,7 +857,7 @@
           Let's try this by making one by ourselves. Under the Cons heading, open a <code>ol</code> element and include a closing one as well. In between those two, use <a href="Cons list.html" target="_blank">this</a> list and make sure to use three <code>li elements</code>.
           Type them out one by one and make sure that everything is correct.
           <br><br>
-          Your code should look like this:
+          Your code should look like this (the "isn't" is very weird because you haven't set an advanced features that would declare the character set):
           <br><br>
           <img src="Images/Cons List code.png" width="100%" height="auto">
           <br><br>
