--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="google-site-verification" content="Ub6LLDfczY9apdDwMDdYBFD55voDA9LRDCfXZU0y0vE" />
 <meta name="HandheldFriendly" content="true">
     <div class="TITLE"><title> HTML Crash Course </title></div>
-    <link rel="shortcut icon" href="Images/Web logo.png" />
+    <link rel="icon" href="Images/Web logo.png" />
     <link rel="stylesheet" href="stylesheet.css">
     <a class="homepage_shortcut" href="index.html">
       <img src="Images/Web logo.png" width="10%" height="auto">
